--- a/src/controllers/welcome/welcome.scss
+++ b/src/controllers/welcome/welcome.scss
@@ -1,8 +1,94 @@
 .welcome {
+  position: absolute;
+  opacity: 0;
+  padding: 1%;
+  left: calc(70% - 112px);
+  top: calc(50% - 170px);
+  -webkit-transform: scale(0);
+  -moz-transform: scale(0);
+  -o-transform: scale(0);
+  -ms-transform: scale(0);
+  height: 40%;
   h1 {
+    display: block;
     text-align: center;
+  }
+  &.animate-welcome {
+    display: block;
+    opacity: 1;
+    -webkit-transform:  scale(1);
+    -moz-transform:  scale(1);
+    -o-transform:  scale(1);
+    -ms-transform:  scale(1);
+    transition: all 1s ease-in-out;
+    -webkit-transition: all 1s ease-in-out; /** Chrome & Safari **/
+    -moz-transition: all 1s ease-in-out; /** Firefox **/
+    -o-transition: all 1s ease-in-out; /** Opera **/
   }
 }
 .options-welcome {
   text-align: center;
+}
+.animation-container {
+  float: left;
+}
+.ryu-ready {
+  &.play {
+    display: block;
+  }
+  &.stop {
+    display: none;
+  }
+}
+.ryu-throwing-hadouken {
+  &.play {
+    display: block;
+  }
+  &.stop {
+    display: none;
+  }
+}
+.ryu-cool {
+  &.play {
+    display: block;
+  }
+  &.stop {
+    display: none;
+  }
+}
+.hadouken {
+  position: absolute;
+  &.play {
+    display: block;
+    left: calc(35% - 50px);
+    top: calc(32% - 50px);
+    &.to-box {
+      -webkit-transform: translate(500px,0);
+      -moz-transform: translate(500px,0);
+      -o-transform: translate(500px,0);
+      -ms-transform: translate(500px,0);
+      transition: all 0.5s ease-in-out;
+      -webkit-transition: all 0.5s ease-in-out; /** Chrome & Safari **/
+      -moz-transition: all 0.5s ease-in-out; /** Firefox **/
+      -o-transition: all 0.5s ease-in-out; /** Opera **/
+    }
+  }
+  &.stop {
+    display: none;
+  }
+}
+.box {
+  display: block;
+  .start-animation {
+    position: absolute;
+    left: calc(75% - 50px);
+    top: calc(50% - 80px);
+    font-weight:  600;
+    color: red;
+  }
+  img {
+    position: absolute;
+    left: calc(75% - 112px);
+    top: calc(50% - 170px);
+  }
 }
